--- a/Inotki/templates/article/information/privacy_policy.html
+++ b/Inotki/templates/article/information/privacy_policy.html
@@ -32,47 +32,47 @@
 
         <h3 class="title" id="title1">Introduction</h3>
         <p class="paragraph">
-            This Privacy Policy outlines how Igonii collects, uses, and protects the personal data of our users.
+            This Privacy Policy outlines how Todooli collects, uses, and protects the personal data of our users.
             By using our task management app, you consent to the collection and use of
             your personal data as described in this policy.
         </p>
 
         <h3 class="title" id="title2">Types of Data Collected</h3>
         <p class="paragraph">
-            Igonii collects personal data such as names, email addresses, and task information.
+            Todooli collects personal data such as names, email addresses, and task information.
             We may also collect device information and IP addresses for the purposes
             of providing and improving our services.
         </p>
 
         <h3 class="title" id="title3">Use of Data</h3>
         <p class="paragraph">
-            Igonii uses the personal data we collect to provide our services, such as creating and managing tasks,
+            Todooli uses the personal data we collect to provide our services, such as creating and managing tasks,
             and to improve the user experience. We may also use data for marketing and analytics purposes.
         </p>
 
         <h3 class="title" id="title4">Sharing of Data</h3>
         <p class="paragraph">
-            Igonii may share personal data with third parties in order to provide our services,
+            Todooli may share personal data with third parties in order to provide our services,
             comply with legal obligations, or in the event of a merger or acquisition. However,
             we take steps to ensure that any third parties are bound by appropriate privacy and security obligations.
         </p>
 
         <h3 class="title" id="title5">Data Security</h3>
         <p class="paragraph">
-            Igonii implements appropriate security measures to protect the personal data of our users
+            Todooli implements appropriate security measures to protect the personal data of our users
             from unauthorized access or breaches. We regularly review and update these measures
             to ensure that they remain effective.
         </p>
 
         <h3 class="title" id="title6">Data Access and Correction</h3>
         <p class="paragraph">
-            Igonii provides users with the ability to access, correct, and delete their personal data.
+            Todooli provides users with the ability to access, correct, and delete their personal data.
             Additionally, we allow users to request a copy of their personal data in a machine-readable format.
         </p>
 
         <h3 class="title" id="title7">Changes to this Privacy Policy</h3>
         <p class="paragraph">
-            Igonii reserves the right to update this Privacy Policy at any time.
+            Todooli reserves the right to update this Privacy Policy at any time.
             We will notify users of any changes by updating the "last updated" date at the bottom of this policy.
         </p>
 
