--- a/Inotki/templates/article/useit.html
+++ b/Inotki/templates/article/useit.html
@@ -22,12 +22,12 @@
                 <li><a href="">◗ The Benefits of Using a Task Manager: Increased Productivity and Organization</a> </li>
                 <li><a href="#title1">◗ Collaboration and Task Sharing: How a Task Manager Can Improve Teamwork</a></li>
                 <li><a href="#title2">◗ Integration and Customization: How a Task Manager Can Fit Your Workflow and Needs</a></li>
-                <li><a href="#title3">◗ Step-by-Step Guide to Managing Tasks with Igonii</a></li>
-                <li><a href="#title4">◗ Efficiently Organizing with Igonii: Creating and Updating Tags</a></li>
-                <li><a href="#title5">◗ Personalizing Your Igonii Profile: A Guide to Updating</a></li>
-                <li><a href="#title6">◗ Diving into the Settings Section: A Guide to Igonii Configuration</a></li>
-                <li><a href="#title7">◗ Staying Informed with Igonii: Understanding the Notification Section</a></li>
-                <li><a href="#title8">◗ Efficiently Filter Your Tasks Using Tags in Igonii</a></li>
+                <li><a href="#title3">◗ Step-by-Step Guide to Managing Tasks with Todooli</a></li>
+                <li><a href="#title4">◗ Efficiently Organizing with Todooli: Creating and Updating Tags</a></li>
+                <li><a href="#title5">◗ Personalizing Your Todooli Profile: A Guide to Updating</a></li>
+                <li><a href="#title6">◗ Diving into the Settings Section: A Guide to Todooli Configuration</a></li>
+                <li><a href="#title7">◗ Staying Informed with Todooli: Understanding the Notification Section</a></li>
+                <li><a href="#title8">◗ Efficiently Filter Your Tasks Using Tags in Todooli</a></li>
             </ul>
         </div>
 
@@ -57,14 +57,14 @@
             Once you have set up your tasks and prioritized them, it's important to stay on track and monitor
             your progress. One way to do this is by breaking tasks down into smaller, manageable steps and setting
             deadlines for each step. Additionally, it's important to stay accountable for your progress by regularly
-            reviewing your tasks and checking off completed items. A Task manager such as Igonii can be helpful for
+            reviewing your tasks and checking off completed items. A Task manager such as Todooli can be helpful for
             monitoring progress and staying accountable, as it allows users to track their progress in real-time and
             set reminders for tasks.
         </p>
 
-        <h3 class="title" id="title4">Step-by-Step Guide to Managing Tasks with Igonii</h3>
+        <h3 class="title" id="title4">Step-by-Step Guide to Managing Tasks with Todooli</h3>
         <p class="paragraph">
-            This section provides a comprehensive guide on how to effectively manage tasks using Igonii. From creating
+            This section provides a comprehensive guide on how to effectively manage tasks using Todooli. From creating
             new tasks to updating existing ones, this guide covers all the necessary steps to help
             you stay organized and on top of your to-do list.
         </p>
@@ -85,9 +85,9 @@
             </div>
         </details>
 
-        <h3 class="title" id="title5">Efficiently Organizing with Igonii: Creating and Updating Tags</h3>
+        <h3 class="title" id="title5">Efficiently Organizing with Todooli: Creating and Updating Tags</h3>
         <p class="paragraph">
-            This section provides a comprehensive guide on how to effectively create and manage tags using Igonii,
+            This section provides a comprehensive guide on how to effectively create and manage tags using Todooli,
             making it easier for you to categorize and organize your tasks. With simple steps and clear instructions,
             this guide will show you how to maximize the use of tags to stay organized and on top of your tasks.
         </p>
@@ -108,11 +108,11 @@
             </div>
         </details>
 
-        <h3 class="title" id="title7">Personalizing Your Igonii Profile: A Guide to Updating</h3>
+        <h3 class="title" id="title7">Personalizing Your Todooli Profile: A Guide to Updating</h3>
         <p class="paragraph">
-            This section offers a step-by-step guide to updating your Igonii profile to better reflect your personal
+            This section offers a step-by-step guide to updating your Todooli profile to better reflect your personal
             preferences and style. Whether you want to change your profile picture, add a bio, or update your personal
-            information, this guide will help you customize your profile to make the most of your Igonii experience.
+            information, this guide will help you customize your profile to make the most of your Todooli experience.
             Get ready to personalize and elevate your profile with ease!
         </p>
         <details>
@@ -129,13 +129,13 @@
             </div>
         </details>
 
-        <h3 class="title" id="title8">Diving into the Settings Section: A Guide to Igonii Configuration</h3>
+        <h3 class="title" id="title8">Diving into the Settings Section: A Guide to Todooli Configuration</h3>
         <p class="paragraph">
-            This section provides a comprehensive guide to the various settings available in Igonii, allowing you
+            This section provides a comprehensive guide to the various settings available in Todooli, allowing you
             to configure the platform to meet your needs. From the option to display completed tasks to instant
             deletion, email notifications, dark mode, and private profile, this guide will help you make the most of the
-            Igonii platform by showing you how to adjust each setting to your preferences. Get ready to dive into
-            the world of Igonii configuration!
+            Todooli platform by showing you how to adjust each setting to your preferences. Get ready to dive into
+            the world of Todooli configuration!
         </p>
         <details>
             <summary>> Steps</summary>
@@ -156,12 +156,12 @@
             </div>
         </details>
 
-        <h3 class="title" id="title9">Staying Informed with Igonii: Understanding the Notification Section</h3>
+        <h3 class="title" id="title9">Staying Informed with Todooli: Understanding the Notification Section</h3>
         <p class="paragraph">
-            This section provides a comprehensive guide to the notification section in Igonii,
+            This section provides a comprehensive guide to the notification section in Todooli,
             helping you stay informed and on top of your tasks. With clear instructions and a detailed explanation of
             the various notification options, this guide will show you how to configure the platform to meet
-            your needs and ensure you never miss a beat. Get ready to stay informed with Igonii!
+            your needs and ensure you never miss a beat. Get ready to stay informed with Todooli!
         </p>
         <details>
             <summary>> Steps</summary>
@@ -174,12 +174,12 @@
             </div>
         </details>
 
-        <h3 class="title" id="title10">Efficiently Filter Your Tasks Using Tags in Igonii</h3>
+        <h3 class="title" id="title10">Efficiently Filter Your Tasks Using Tags in Todooli</h3>
         <p class="paragraph">
-            This section provides a step-by-step guide to filtering your tasks in Igonii using tags.
+            This section provides a step-by-step guide to filtering your tasks in Todooli using tags.
             With clear instructions and examples, this guide will show you how to use tags to efficiently categorize
             and manage your tasks, making it easier to stay organized and on top of your to-do list.
-            Get ready to discover the power of tag-based filtering in Igonii!
+            Get ready to discover the power of tag-based filtering in Todooli!
         </p>
         <details>
             <summary>> Steps</summary>
@@ -213,7 +213,7 @@
             <div class="article-box-sol">
                 <div class="article-box">
                     <h3>Use it !</h3>
-                    <p>How to use Igonii ?</p>
+                    <p>How to use Todooli ?</p>
                     <button class="readmore" onclick="location.href='{% url 'article-use-it' %}'">Read more</button>
                 </div>
             </div>
