--- a/Inotki/templates/base/option_update.html
+++ b/Inotki/templates/base/option_update.html
@@ -14,9 +14,9 @@
 
 {% block body_content %}
     <h2><a href=""><i class="fa-sharp fa-solid fa-gear"></i> <p>Settings</p></a></h2>
-    <h3 class="title">Igonii - Your Personal Task Management Assistant</h3>
+    <h3 class="title">Todooli - Your Personal Task Management Assistant</h3>
     <p class="paragraph">
-        Igonii offers various settings to aid you in managing your tasks such as showing completed tasks,
+        Todooli offers various settings to aid you in managing your tasks such as showing completed tasks,
         instant deletion, email notifications, dark mode and private profile.
         These settings allow you to keep track of progress, easily manage tasks,
         stay informed and have a secure and private way of managing tasks.
