--- a/Inotki/templates/base/user_account_activation.html
+++ b/Inotki/templates/base/user_account_activation.html
@@ -15,7 +15,7 @@
         <img class="logo-pic text-center" src="/static/img/logo.png" alt="logo">
 
     <form method="POST" action="">
-        <h2 class="font-weight-bold text-center title">Welcome to Igonii!</h2>
+        <h2 class="font-weight-bold text-center title">Welcome to Todooli!</h2>
         <h3 class="font-weight-bold text-center title">Email verification required</h3>
         <p class="text-center">Please check your email inbox to verify your email address and continue.</p>
         <p class="text-center">Or <a href="{% url 'register' %}">re-signup</a> if you've entered the wrong email address before</p>
