--- a/Inotki/templates/home.html
+++ b/Inotki/templates/home.html
@@ -28,7 +28,7 @@
         </div>
         <p>
             <i class="fa-sharp fa-solid fa-quote-left"></i>
-            Igonii is a way to focus on what is important and achieve your goals in an efficient and organized manner.
+            Todooli is a way to focus on what is important and achieve your goals in an efficient and organized manner.
         </p>
     </div>
 
@@ -71,7 +71,7 @@
             <div class="article-box-sol">
                 <div class="article-box">
                     <h3>Use it !</h3>
-                    <p>How to use Igonii ?</p>
+                    <p>How to use Todooli ?</p>
                     <button class="readmore" onclick="location.href='{% url 'article-use-it' %}'">Read more</button>
                 </div>
             </div>
