--- a/Inotki/templates/main.html
+++ b/Inotki/templates/main.html
@@ -27,7 +27,7 @@
 
     <title>
         {% filter default:0|add:' -' %}{% block title %}{% endblock title %}
-        {%endfilter %} Igonii
+        {%endfilter %} Todooli
     </title>
     <!--
         @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@
@@ -150,8 +150,8 @@
     </section>
 {% endif %}
 
-<!-- Igonii -->
-<section  id="content" title="Igonii : Task and Deadline Tracker">
+<!-- Todooli -->
+<section  id="content" title="Todooli : Task and Deadline Tracker">
     <h1 class="d-none">Task manager</h1>
     {% block body_content %}{% endblock %}
 </section>
