--- a/Inotki/templates/main_footer.html
+++ b/Inotki/templates/main_footer.html
@@ -27,7 +27,7 @@
 
     <title>
         {% filter default:0|add:' -' %}{% block title %}{% endblock title %}
-        {%endfilter %} Igonii
+        {%endfilter %} Todooli
     </title>
     <!--
         @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@
@@ -150,7 +150,7 @@
     </section>
 {% endif %}
 
-<section  id="content" title="Igonii : Task and Deadline Tracker">
+<section  id="content" title="Todooli : Task and Deadline Tracker">
     <h1 class="d-none">Task manager</h1>
     {% block body_content %}{% endblock %}
 </section>
@@ -161,7 +161,7 @@
             <p>About Us</p>
             <ul>
                 <li>
-                    Igonii is an online task management tool that makes it simple for individuals and small businesses
+                    Todooli is an online task management tool that makes it simple for individuals and small businesses
                     to stay organized, on top of tasks and collaborate with team members. Our easy-to-use interface makes
                     it simple to get started with task management.
                 </li>
@@ -194,7 +194,7 @@
             </ul>
         </div>
     </div>
-    <p class="copyright">Copyright © 2023 Igonii. All rights reserved.</p>
+    <p class="copyright">Copyright © 2023 Todooli. All rights reserved.</p>
 </footer>
 
 </body>
