--- a/Inotki/templates/base/user_delete.html
+++ b/Inotki/templates/base/user_delete.html
@@ -11,7 +11,7 @@
 {% endblock %}
 
 {% block body_content %}
-    <h2><a href="{% url 'option_update' %}"><i class="fa-sharp fa-solid fa-gear"></i> <p>Settings</p></a></h2>
+    <h2><a href="{% url 'option_update' %}"><i class="fa-solid fa-arrow-left"></i><p>Settings</p></a></h2>
 
     <h3 class="title">Second Thoughts - Retracting Account Deletion Request</h3>
     <p class="paragraph">After giving it further thought, would you like to retract your request for account deletion and keep your account active? <br>
