--- a/Inotki/templates/tags/tag_form.html
+++ b/Inotki/templates/tags/tag_form.html
@@ -14,7 +14,7 @@
 
 {% block body_content %}
 
-    <h2><a href="{% url 'tags' %}"><i class="fa-solid fa-tag"></i><p>Tag</p></a></h2>
+    <h2><a href="{% url 'tags' %}"><i class="fa-solid fa-arrow-left"></i><p>Tag</p></a></h2>
     <form method="POST" action="">
         {% csrf_token %}
         {{ form|crispy }}
