--- a/Inotki/templates/tags/tag_list.html
+++ b/Inotki/templates/tags/tag_list.html
@@ -26,7 +26,7 @@
         <i class="fa-solid fa-square-plus"></i>
     </button>
 
-    <div class="create-button-mobile">
+    <div class="create-button-mobile hidden">
         <button  onclick="location.href='{% url 'tag_create' %}'">
             <i class="fa-regular fa-plus"></i>
         </button>
