--- a/Inotki/static/css/button.css
+++ b/Inotki/static/css/button.css
@@ -11,7 +11,7 @@
 	color: #fff;
 	cursor: pointer;
 	display: inline-flex;
-	font-family: "JetBrains Mono",monospace;
+    font-family: "Poppins-Light", monospace;
 	height: 48px;
 	justify-content: center;
 	line-height: 1;
@@ -57,7 +57,7 @@
 	color: #36395A;
 	cursor: pointer;
 	display: inline-flex;
-	font-family: "JetBrains Mono",monospace;
+    font-family: "Poppins-Light", monospace;
 	height: 48px;
 	justify-content: center;
 	line-height: 1;
