--- a/Inotki/static/css/list.css
+++ b/Inotki/static/css/list.css
@@ -11,6 +11,10 @@
   display: none;
 }
 
+.create-button-mobile.hidden {
+  display: none;
+}
+
 .create-button-mobile button{
   background-color: #4993ff;
   border-radius: 50%;
@@ -221,8 +225,10 @@ h3{
 .task{
   padding-left:15px;
   padding-right:15px;
-  border: 1px solid rgba(73, 147, 255, 0.66);
-  border-radius: 5px 5px 5px 5px;
+  border-top: 1px solid rgba(73, 147, 255, 0.66);
+  border-right: 1px solid rgba(73, 147, 255, 0.66);
+  border-bottom: 1px solid rgba(73, 147, 255, 0.66);
+  border-left: 5px solid rgb(61, 142, 255);
   margin-bottom: .5rem;
   margin-top: .3rem;
   display: flex;
@@ -232,7 +238,7 @@ h3{
 }
 
 .task:hover{
-  background-color: #4993ff;
+  background-color: rgb(61, 142, 255);
   color: white;
 }
 
@@ -240,8 +246,10 @@ h3{
 .task-completed{
   padding-left:15px;
   padding-right:15px;
-  border: 1px solid rgb(183, 183, 183);
-  border-radius: 5px 5px 5px 5px;
+  border-top: 1px solid rgb(183, 183, 183);
+  border-right: 1px solid rgb(183, 183, 183);
+  border-bottom: 1px solid rgb(183, 183, 183);
+  border-left: 5px solid rgb(75, 75, 75);
   margin-bottom: .5rem;
   margin-top: .3rem;
   display: flex;
@@ -251,7 +259,7 @@ h3{
 }
 
 .task-completed:hover{
-  background-color: rgb(114, 114, 114);
+  background-color: rgb(75, 75, 75);
   color: white;
 }
 
@@ -315,8 +323,8 @@ h3{
 }
 
 small{
-  font-size: .76rem;
-  font-family: "JetBrains Mono", monospace;
+  font-size: .95rem;
+  font-family: "Poppins-Light", monospace;
 }
 
 .no-items{
@@ -346,7 +354,7 @@ small{
 
 @media all and (min-width: 991px) {
   .create-button-mobile {
-    display: none;
+    margin-right: 16vw;
   }
 }
 
