--- a/Inotki/templates/tasks/task_form.html
+++ b/Inotki/templates/tasks/task_form.html
@@ -13,7 +13,7 @@
 {% endblock %}
 
 {% block body_content %}
-    <h2><a href="{% url 'tasks' %}"><i class="fa-sharp fa-solid fa-list-check"></i> <p>Task</p></a></h2>
+    <h2><a href="{% url 'tasks' %}"><i class="fa-solid fa-arrow-left"></i><p>Task</p> </a></h2>
     <form method="POST" action="">
         {% csrf_token %}
         {% if admin %}<p> {{ admin }}</p>{% endif %}
