--- a/Inotki/templates/tasks/task_list.html
+++ b/Inotki/templates/tasks/task_list.html
@@ -49,7 +49,7 @@
         <i class="fa-solid fa-file-circle-plus"></i>
     </button>
 
-    <div class="create-button-mobile">
+    <div class="create-button-mobile hidden">
         <button  onclick="location.href='{% url 'task_create' %}'">
             <i class="fa-regular fa-plus"></i>
         </button>
